Bug 308959 - wrong origin of classes in print page preview
Summary: wrong origin of classes in print page preview
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN
Platform: unspecified Linux
: NOR major
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-24 22:48 UTC by Ralf Habacker
Modified: 2013-11-02 17:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2012-10-24 22:48:56 UTC
When using the print preview for a class diagram, the origin of displayed classes are at least partially outside of the print page. 

Reproducible: Always

Steps to Reproduce:
1. create  class and place at top left corner 
2. open print preview 

Actual Results:  
class is displayed at least partially outside the page area.

Expected Results:  
classes should be displayed inside the printing page area. 

Introduced by the QGraphicsScene merge.
Comment 1 Ralf Habacker 2012-10-24 22:50:14 UTC
SVN commit 1322277 by habacker:

Cleaned up print page code by using qt4 print api.
This fixes also a bug not using correct borders.


 M  +1 -1      uml.cpp  
 M  +22 -154   umlscene.cpp  
 M  +2 -2      umlscene.h  
 M  +3 -3      umlviewimageexportermodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1322277