Cleaned up print page code by using qt4 print api. This fixes also a bug not using correct borders.

BUG: 308959

svn path=/trunk/KDE/kdesdk/umbrello/; revision=1322277