umbrello/umlscene.h
@@ -394,8 +394,8 @@ public:
 
     void updateDocumentation(bool clear);
 
-    void getDiagram(const UMLSceneRect &rect, QPixmap & diagram);
-    void getDiagram(const UMLSceneRect &area, QPainter & painter);
+    void getDiagram(QPixmap & diagram, const UMLSceneRect &rect);
+    void getDiagram(QPainter &painter, const UMLSceneRect &source, const UMLSceneRect &target = UMLSceneRect());
 
     void copyAsImage(QPixmap*& pix);
 
